<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableEnd="@drawable/icon_block"
                android:fontFamily="@font/vazir_fd_wol"
                android:text="@string/title_note_toturial"
                android:textColor="#000000"
                android:textDirection="rtl"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/vazir_fd_wol"
                android:text="@string/note1"
                android:textColor="#A6000000"
                android:textDirection="rtl"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/vazir_fd_wol"
                android:text="@string/note2"
                android:textColor="#A6000000"
                android:textDirection="rtl"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/vazir_fd_wol"
                android:text="@string/note3"
                android:textColor="#F44336"
                android:textDirection="rtl"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/vazir_fd_wol"
                android:text="@string/note4"
                android:textColor="#F44336"
                android:textDirection="rtl"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_support"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/vazir_fd_wol"
                android:gravity="center"
                android:text="@string/note0"
                android:textColor="#388E3C"
                android:textDirection="rtl"
                android:textSize="12sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_support_not"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/vazir_fd_wol"
                android:gravity="center"
                android:text="@string/noteNot"
                android:textColor="#E53935"
                android:textDirection="rtl"
                android:textSize="12sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="#4776E6"
                android:backgroundTintMode="screen"
                android:elevation="6dp"
                android:fontFamily="@font/vazir_fd_wol"
                android:padding="8dp"
                android:text="@string/tv_btn_note"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:cornerRadius="12dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>